<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>error-code-crawler-maven-plugin</artifactId>
    <name>error-code-crawler-maven-plugin</name>
    <version>2.0.2</version>
    <description>Crawler for Exasol error codes.</description>
    <url>https://github.com/exasol/error-code-crawler-maven-plugin/</url>
    <packaging>maven-plugin</packaging>
    <properties>
        <java.version>17</java.version>
        <maven.version>3.9.6</maven.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.apache.maven.plugin-tools</groupId>
            <artifactId>maven-plugin-annotations</artifactId>
            <version>3.11.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-plugin-api</artifactId>
            <version>${maven.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Explicitly specify provided scope to fix warning by maven-plugin-plugin -->
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-model</artifactId>
            <version>${maven.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-core</artifactId>
            <version>${maven.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <!-- excluded since it introduces CVE-2020-8908 -->
                    <groupId>com.google.guava</groupId>
                    <artifactId>guava</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>fr.inria.gforge.spoon</groupId>
            <artifactId>spoon-core</artifactId>
            <version>10.4.2</version>
        </dependency>
        <dependency>
            <!-- Upgrade transitive dependency of spoon-core to fix CVE-2023-4218 -->
            <groupId>org.eclipse.jdt</groupId>
            <artifactId>org.eclipse.jdt.core</artifactId>
            <version>3.36.0</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <!-- Upgrade transitive dependency of spoon-core to fix CVE-2024-25710 & CVE-2024-26308 -->
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>1.26.0</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.exasol</groupId>
            <artifactId>error-reporting-java</artifactId>
            <version>1.0.1</version>
        </dependency>
        <dependency>
            <!-- org.apache.maven:maven-core uses org.slf4j:slf4j-api:jar:1.7.36 -->
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>2.0.12</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>2.16.1</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>2.16.1</version>
        </dependency>
        <dependency>
            <groupId>com.exasol</groupId>
            <artifactId>error-code-model-java</artifactId>
            <version>2.1.3</version>
        </dependency>
        <!-- test dependencies -->
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>2.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>nl.jqno.equalsverifier</groupId>
            <artifactId>equalsverifier</artifactId>
            <version>3.15.7</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.shared</groupId>
            <artifactId>maven-verifier</artifactId>
            <version>1.8.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-artifact</artifactId>
            <version>${maven.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.exasol</groupId>
            <artifactId>maven-project-version-getter</artifactId>
            <version>1.2.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.exasol</groupId>
            <artifactId>maven-plugin-integration-testing</artifactId>
            <version>1.1.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-plugin-plugin</artifactId>
                <version>3.10.2</version>
            </plugin>
            <plugin>
                <groupId>com.exasol</groupId>
                <artifactId>project-keeper-maven-plugin</artifactId>
                <version>4.1.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.exasol</groupId>
                <artifactId>error-code-crawler-maven-plugin</artifactId>
                <version>${project.version}</version>
                <executions>
                    <execution>
                        <id>verify</id>
                        <!-- We disable execution since this version is not yet released; invoked in CI manually -->
                        <phase>none</phase>
                    </execution>
                </executions>
                <configuration>
                    <excludes>
                        <exclude>src/test/java/com/exasol/errorcodecrawlermavenplugin/examples/**</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.itsallcode</groupId>
                <artifactId>openfasttrace-maven-plugin</artifactId>
                <version>1.8.0</version>
                <executions>
                    <execution>
                        <id>trace-requirements</id>
                        <goals>
                            <goal>trace</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.basepom.maven</groupId>
                <artifactId>duplicate-finder-maven-plugin</artifactId>
                <configuration>
                    <ignoredResourcePatterns>
                        <!-- Duplicate resources from org.eclipse.jdt -->
                        <ignoredResourcePattern>about.html</ignoredResourcePattern>
                        <ignoredResourcePattern>.api_description</ignoredResourcePattern>
                        <ignoredResourcePattern>about_files/LICENSE-2.0.txt</ignoredResourcePattern>
                        <ignoredResourcePattern>.options</ignoredResourcePattern>
                        <ignoredResourcePattern>plugin.xml</ignoredResourcePattern>
                        <ignoredResourcePattern>plugin.properties</ignoredResourcePattern>
                    </ignoredResourcePatterns>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <!-- We turn off `processing` because it complains about every annotation -->
                        <arg>-Xlint:all,-processing</arg>
                        <arg>-Werror</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <parent>
        <artifactId>error-code-crawler-maven-plugin-generated-parent</artifactId>
        <groupId>com.exasol</groupId>
        <version>2.0.2</version>
        <relativePath>pk_generated_parent.pom</relativePath>
    </parent>
</project>
